--- a/src/main/resources/org/glizzygladiators/td/scenes/WelcomeScreen.fxml
+++ b/src/main/resources/org/glizzygladiators/td/scenes/WelcomeScreen.fxml
@@ -7,16 +7,16 @@
 <?import javafx.scene.layout.*?>
 
 <StackPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="org.glizzygladiators.td.controllers.WelcomeScreen"
-            prefHeight="400.0" prefWidth="600.0">
-
+           xmlns:fx="http://javafx.com/fxml"
+           fx:controller="org.glizzygladiators.td.controllers.WelcomeScreen"
+           fx:id="root"
+           prefHeight="750" prefWidth="1250">
 
     <VBox alignment="CENTER" spacing="20">
         <Label text="Richard tower defense" alignment="CENTER" style="-fx-font-size:40; -fx-font-weight: bold;"/>
         <HBox alignment="CENTER" spacing="20">
-            <Button text="Start" onMouseClicked="#StartClicked"/>
-            <Button text="Quit" onMouseClicked="#QuitClicked"/>
+            <Button text="Start" onMouseClicked="#startClicked"/>
+            <Button text="Quit" onMouseClicked="#quitClicked"/>
         </HBox>
     </VBox>
 
