--- a/src/main/resources/org/glizzygladiators/td/scenes/WelcomeScreen.fxml
+++ b/src/main/resources/org/glizzygladiators/td/scenes/WelcomeScreen.fxml
@@ -15,8 +15,8 @@
     <VBox alignment="CENTER" spacing="20">
         <Label text="Richard tower defense" alignment="CENTER" style="-fx-font-size:40; -fx-font-weight: bold;"/>
         <HBox alignment="CENTER" spacing="20">
-            <Button text="Start" onMouseClicked="#startClicked"/>
-            <Button text="Quit" onMouseClicked="#quitClicked"/>
+            <Button text="Start" onMouseClicked="#startClicked" id="startButton"/>
+            <Button text="Quit" onMouseClicked="#quitClicked" id="quitButton"/>
         </HBox>
     </VBox>
 
