Add working spawn wave mechanism

--- a/src/main/resources/org/glizzygladiators/td/scenes/GameScreen.fxml
+++ b/src/main/resources/org/glizzygladiators/td/scenes/GameScreen.fxml
@@ -38,7 +38,7 @@
                             onMouseClicked="#buyTower"/>
                     <Button text="Buy Towers" maxWidth="Infinity" GridPane.rowIndex="1" />
                     <Button text="Start Wave" maxWidth="Infinity" GridPane.rowIndex="2" 
-                            onMouseClicked="#spawnEnemies"/>
+                            onMouseClicked="#spawnEnemies" id="StartWaveButton"/>
                 </GridPane>
 
 
