--- a/src/main/resources/org/glizzygladiators/td/scenes/VictoryScreen.fxml
+++ b/src/main/resources/org/glizzygladiators/td/scenes/VictoryScreen.fxml
@@ -8,12 +8,12 @@
 
 <StackPane xmlns="http://javafx.com/javafx"
            xmlns:fx="http://javafx.com/fxml"
-           fx:controller="org.glizzygladiators.td.controllers.GameOverScreen"
+           fx:controller="org.glizzygladiators.td.controllers.VictoryScreen"
            fx:id="root"
            prefHeight="750" prefWidth="1250">
 
     <VBox alignment="CENTER" spacing="20">
-        <Label text="SORRY BRO" alignment="CENTER" style="-fx-font-size:40; -fx-font-weight: bold;"/>
+        <Label text="NICE BRO" alignment="CENTER" style="-fx-font-size:40; -fx-font-weight: bold;"/>
         <HBox alignment="CENTER" spacing="15" >
             <HBox alignment="CENTER" spacing="10">
                 <Label text="SCORE:"  style="-fx-font-size:40; -fx-font-weight: bold; -fx-text-fill: red"/>
